Refine guidance text for TDA proposals
Updated text for clarity and consistency, including formatting changes to emphasize key terms like TDA and TCoP. Adjusted phrasing for better readability and corrected minor grammatical issues.

--- a/source/documentation/governance/tda-architectural-alignment.html.md.erb
+++ b/source/documentation/governance/tda-architectural-alignment.html.md.erb
@@ -9,11 +9,11 @@ review_in: 3 months
 
 ## Introduction
 
-This guidance has been designed to help project teams submitting proposals to the Technical Design Authority (TDA) using the [TDA Submission Template](https://justiceuk.sharepoint.com/:p:/r/sites/TechnicalDesignAuthority219/_layouts/15/Doc.aspx?sourcedoc=%7B82C7FC30-FDB4-4679-AD4E-BD5EDCEFD1A1%7D&file=TDA_Submission_Template_2.0.pptx&action=edit&mobileredirect=true).
+This guidance has been designed to help project teams submitting proposals to the Technical Design Authority (**TDA**) using the [TDA Submission Template](https://justiceuk.sharepoint.com/:p:/r/sites/TechnicalDesignAuthority219/_layouts/15/Doc.aspx?sourcedoc=%7B82C7FC30-FDB4-4679-AD4E-BD5EDCEFD1A1%7D&file=TDA_Submission_Template_2.0.pptx&action=edit&mobileredirect=true).
 
 Teams are asked to supply details of how their proposal meets specified criteria in three areas - architecture, security and data.
 
-This section contains information on each item listed the "Architectural Alignment" section of the presentation, and provides guidance by attempting to answer three questions.
+This section contains information on each item listed in the "Architectural Alignment" section of the presentation, and provides guidance by attempting to answer three questions.
 
 - **What** does the item mean in this context?
 - **Why** does the item need to be addressed?
@@ -23,7 +23,7 @@ This section contains information on each item listed the "Architectural Alignme
 
 **What?** – Sharing and re-using existing resources (technology, data, services) is encouraged before purchasing any technology, and buying a technology solution is recommended before building from scratch. Benefits include avoiding duplication, speeding up the initial project phases and lowering costs.
 
-**Why** - Your proposal needs to show you’ve considered whether you can share and re-use technology to comply with [TCoP point 8](https://www.gov.uk/guidance/share-and-reuse-technology).
+**Why** - Your proposal needs to show you’ve considered whether you can share and re-use technology to comply with [point 8 of the Technology Code of Practice (**TCoP**)](https://www.gov.uk/guidance/share-and-reuse-technology).
 
 To comply with [TCoP point 11](https://www.gov.uk/guidance/define-your-purchasing-strategy) your proposal must demonstrate
 
@@ -33,13 +33,14 @@ To comply with [TCoP point 11](https://www.gov.uk/guidance/define-your-purchasin
 - how you’re following government contractual limitations
 
 Your proposal should also include details on increasing sustainability to comply with [TCoP point 12](https://www.gov.uk/guidance/make-your-technology-sustainable).
+
 The [spend control process](https://www.gov.uk/service-manual/agile-delivery/spend-controls-check-if-you-need-approval-to-spend-money-on-a-service) requires you to demonstrate you are meeting the requirements for [TCoP point 8](https://www.gov.uk/guidance/share-and-reuse-technology) and [TCoP point 11](https://www.gov.uk/guidance/define-your-purchasing-strategy).
 
 **How?** – Explore the potential for re-use and sharing technology in the guidance for [TCoP point 8](https://www.gov.uk/guidance/share-and-reuse-technology) and developing a purchasing strategy in [TCoP point 11](https://www.gov.uk/guidance/define-your-purchasing-strategy). Section 11 of the [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard) also includes guidance on choosing the right tools and technology.
 
 ## Configure, not customise to improve business agility
 
-**What?** – Configuration is handled via a solution’s settings, meaning changes can be made within a framework of the solution’s properties. Customisation can require extra development work, so changes are subject to a full development life cycle, and an extra cost.
+**What?** – Configuration is handled via a solution’s settings, meaning changes can be contained within the solution’s properties. Customisation can require extra development work, so changes are subject to a full development life cycle, and an extra cost.
 
 **Why?** – To meet the requirements for [TCoP point 9](https://www.gov.uk/guidance/integrate-and-adapt-technology), your proposal needs to demonstrate your solution is adaptable and integrates into the organisation. To meet the requirements for [TCoP point 11](https://www.gov.uk/guidance/define-your-purchasing-strategy) you should also outline the reasons for any proposed customisation work and its effect on your purchasing strategy.
 
@@ -47,11 +48,13 @@ The [spend control process](https://www.gov.uk/service-manual/agile-delivery/spe
 
 **How?** – Review the guidance in section 11 of the [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard), as well as [TCoP point 9](https://www.gov.uk/guidance/integrate-and-adapt-technology). Include information in your proposal on why customisation is required to deliver your service.
 
-## User led to meet user needs
+## User-led to meet user needs
 
 **What?** – User research will help you to understand user needs and behaviour. It helps to define how your technology project or programme improves the user experience. It can identify risks associated with technological changes, skills needed for project delivery and management, requirements for any end user support and any commercial or operational requirements (like replacing obsolete technology).
 
-**Why?** – Your proposal needs to show you understand user needs and behaviour to comply with [TCoP point 1](https://www.gov.uk/guidance/define-user-needs). The spend control process also requires you to demonstrate you are meeting the requirements for [TCoP point 1](https://www.gov.uk/guidance/define-user-needs).
+**Why?** – Your proposal needs to show you understand user needs and behaviour to comply with [TCoP point 1](https://www.gov.uk/guidance/define-user-needs). 
+
+The spend control process also requires you to demonstrate you are meeting the requirements for [TCoP point 1](https://www.gov.uk/guidance/define-user-needs).
 
 **How?** – The [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard) contains details on how to develop a user-led solution. Your presentation should include information on any user research you’ve conducted, and the impact of the research on the proposal.
 
@@ -77,7 +80,7 @@ The [spend control process](https://www.gov.uk/service-manual/agile-delivery/spe
 
 The [spend control process](https://www.gov.uk/service-manual/agile-delivery/spend-controls-check-if-you-need-approval-to-spend-money-on-a-service) also requires you to demonstrate you are meeting the requirements for [TCoP point 8](https://www.gov.uk/guidance/share-and-reuse-technology).
 
-**How?** – Review the guidance in point 11 of the [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard), as well as [TCoP point 8](https://www.gov.uk/guidance/share-and-reuse-technology). Include information on keeping the range of technologies used to a minimum and explain why your solution may require the use of any innovative technologies not currently used within the organisation.
+**How?** – Review the guidance in section 11 of the [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard), as well as [TCoP point 8](https://www.gov.uk/guidance/share-and-reuse-technology). Include information on keeping the range of technologies used to a minimum and explain why your solution may require the use of any innovative technologies not currently used within the organisation.
 
 ## Manage obsolescence to reduce technical debt
 
@@ -87,15 +90,15 @@ The [spend control process](https://www.gov.uk/service-manual/agile-delivery/spe
 
 The [spend control process](https://www.gov.uk/service-manual/agile-delivery/spend-controls-check-if-you-need-approval-to-spend-money-on-a-service) also requires you to demonstrate you are meeting the requirements for [TCoP point 9](https://www.gov.uk/guidance/integrate-and-adapt-technology).
 
-**How?** – Review the guidance in point 11 of the [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard), as well as [TCoP point 9](https://www.gov.uk/guidance/integrate-and-adapt-technology). Include information on replacing legacy technology in your proposal, demonstrating how it could reduce technical debt.
+**How?** – Review the guidance in section 11 of the [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard), as well as [TCoP point 9](https://www.gov.uk/guidance/integrate-and-adapt-technology). Include information on replacing legacy technology in your proposal, demonstrating how it could reduce technical debt.
 
 ## Use open standards
 
 **What?** - Open standards are common rules which allow for the creation of compatible and consistent products, processes and services. They are designed collaboratively and publicly available at little or no costs and incorporating them into a project offers several benefits.
 
-- Using technology which is already available saves time and money.
-- Using standards applied in other projects increases compatibility with a range of stakeholders.
-- Using public standards helps to avoid vendor lock-in and recurring costs.
+- using technology which is already available saves time and money
+- using standards applied in other projects increases compatibility with a range of stakeholders
+- using public standards helps to avoid vendor lock-in and recurring costs
 
 **Why?** - To meet the conditions for [TCoP point 4](https://www.gov.uk/guidance/make-use-of-open-standards), your proposal should include evidence that you’ve considered using open standards and data.
 
