--- a/source/documentation/governance/tda-security-alignment.html.md.erb
+++ b/source/documentation/governance/tda-security-alignment.html.md.erb
@@ -9,7 +9,7 @@ review_in: 3 months
 
 ## Introduction
 
-This guidance has been designed to help project teams submitting proposals to the Technical Design Authority (TDA) using the [TDA Submission Template](https://justiceuk.sharepoint.com/:p:/r/sites/TechnicalDesignAuthority219/_layouts/15/Doc.aspx?sourcedoc=%7B82C7FC30-FDB4-4679-AD4E-BD5EDCEFD1A1%7D&file=TDA_Submission_Template_2.0.pptx&action=edit&mobileredirect=true).
+This guidance has been designed to help project teams submitting proposals to the Technical Design Authority (**TDA**) using the [TDA Submission Template](https://justiceuk.sharepoint.com/:p:/r/sites/TechnicalDesignAuthority219/_layouts/15/Doc.aspx?sourcedoc=%7B82C7FC30-FDB4-4679-AD4E-BD5EDCEFD1A1%7D&file=TDA_Submission_Template_2.0.pptx&action=edit&mobileredirect=true).
 
 Teams are asked to supply details of how their proposal meets specified criteria in three areas - architecture, security and data.
 
