--- a/source/documentation/governance/tda-security-alignment.html.md.erb
+++ b/source/documentation/governance/tda-security-alignment.html.md.erb
@@ -71,10 +71,10 @@ If you’re going through the [spend control process](https://www.gov.uk/service
 
 ## Is security in-built? (Secure by Design)
 
-**What?** – [Secure by Design](https://www.ncsc.gov.uk/guidance/pqc-migration-timelines) is a government framework used to ensure effective cybersecurity practices are built into any new or updated digital services and infrastructure.
+**What?** – [Secure by Design](https://www.security.gov.uk/policy-and-guidance/secure-by-design/) is a government framework used to ensure effective cybersecurity practices are built into any new or updated digital services and infrastructure.
 
 **Why?** –  To meet the conditions for [TCoP point 6](https://www.gov.uk/guidance/the-technology-code-of-practice#make-things-secure) your proposal should confirm that any system or service components have been designed and implemented according to government best practice.
 
 If you’re going through the [spend control process](https://www.gov.uk/service-manual/agile-delivery/spend-controls-check-if-you-need-approval-to-spend-money-on-a-service) you need to explain how you’re meeting [TCoP point 6](https://www.gov.uk/guidance/the-technology-code-of-practice#make-things-secure).
 
-**How?** – Consult the “Network and infrastructure security” section of [TCoP point 6](https://www.gov.uk/guidance/the-technology-code-of-practice#make-things-secure) and the [Secure by Design](https://www.ncsc.gov.uk/guidance/pqc-migration-timelines) site for information on incorporating appropriate cybersecurity solutions into your service. Include details on meeting [Secure by Design](https://www.ncsc.gov.uk/guidance/pqc-migration-timelines) requirements in your proposal.
+**How?** – Consult the “Network and infrastructure security” section of [TCoP point 6](https://www.gov.uk/guidance/the-technology-code-of-practice#make-things-secure) and the [Secure by Design](https://www.security.gov.uk/policy-and-guidance/secure-by-design/) site for information on incorporating appropriate cybersecurity solutions into your service. Include details on meeting [Secure by Design](https://www.security.gov.uk/policy-and-guidance/secure-by-design/) requirements in your proposal.
