Add TDA Submission Template for Data Alignment

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -25,6 +25,7 @@ which covers service design more broadly.
 
 * [TDA Submission Template - Architectural Alignment](/documentation/governance/tda-architectural-alignment.html)
 * [TDA Submission Template - Security Alignment](/documentation/governance/tda-security-alignment.html)
+* [TDA Submission Template - Data Alignment](/documentation/governance/tda-data-alignment.html)
 
 ## Standards
 
