Correct capitalization in governance document section

--- a/source/documentation/governance/tda-architectural-alignment.html.md.erb
+++ b/source/documentation/governance/tda-architectural-alignment.html.md.erb
@@ -19,7 +19,7 @@ This section contains information on each item listed in the "Architectural Alig
 - **Why** does the item need to be addressed?
 - **How** would a team go about meeting the item requirements?
 
-## Re-use before Buy, buy before build
+## Re-use before buy, buy before build
 
 **What?** – Sharing and re-using existing resources (technology, data, services) is encouraged before purchasing any technology, and buying a technology solution is recommended before building from scratch. Benefits include avoiding duplication, speeding up the initial project phases and lowering costs.
 
