--- a/source/documentation/governance/tda-data-alignment.html.md.erb
+++ b/source/documentation/governance/tda-data-alignment.html.md.erb
@@ -20,7 +20,7 @@ This section contains information on each item listed in the "Data Alignment" se
 - **How** would a team go about meeting the item requirements?
 
 
-## Is Data created or maintained by the product treated as an Asset (Product)? 
+## Is data created or maintained by the product treated as an asset (product)? 
 
 **What?** – An assessment on handling the data produced by your service/product. Data should be treated as a “product/asset”  
 
@@ -34,7 +34,7 @@ If you’re going through the [spend control process](https://www.gov.uk/service
 **How?** – Review the section “Plan how you will manage your data throughout its lifecycle” in [TCoP point 10](https://www.gov.uk/guidance/make-better-use-of-data). Include information related to handling product data and instances where it is used outside of the proposed service/product.  
 
 
-## Is Data accessible and shareable? 
+## Is data accessible and shareable? 
 
 **What?** – Decide who your solution data is shared with and accessible to (platforms? APIs?). Data integration may require an agreement at agency or organisation level (for example, data on prisons being embedded/aligned with the HMPPS data hub). Operational use can also dictate how the proposal is embedded. You may need to plan for any potential changes in data capture which could affect the setup for the current integration.  
 
@@ -45,7 +45,7 @@ If you’re going through the [spend control process](https://www.gov.uk/service
 **How?** – Review the section “Publishing and sharing your data” in [TCoP point 10](https://www.gov.uk/guidance/make-better-use-of-data) to check your proposal meets the necessary requirements for data access and sharing. Include any relevant information in your presentation.  
 
 
-## Is access to Data authenticated and authorised appropriately?
+## Is access to data authenticated and authorised appropriately?
 
 **What?** – Data access requirements for your service need to be defined. These can include using authentication and/or authorisation, establishing a level of security clearance, using anonymisation, applying an approval flow for information assets or listing data in Catalogue (Find MOJ Data).  
 
@@ -56,7 +56,7 @@ If you’re going through the [spend control process](https://www.gov.uk/service
 **How?** – Review the section “Use proportionate security for your technology” in [TCoP point 6](https://www.gov.uk/guidance/the-technology-code-of-practice#make-things-secure) to check your proposal applies all required data regulations. Section 9 of the [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard) includes information on securing a service.  
 
 
-## Are you meeting relevant Data regulations? 
+## Are you meeting relevant data regulations? 
 
 **What?** – Products and services which work with data are required to comply with current data regulations. If data movement is required, a Data Protection Impact Assessment (**DPIA**) needs to be completed to meet General Data Protection Regulation (**GDPR**) requirements. Data sharing agreements/memoranda of understanding with external departments may also be required.  
 
