Add note on GOV.UK security standard GovS007
Added a note about the current GOV.UK security standard.

--- a/source/documentation/governance/tda-security-alignment.html.md.erb
+++ b/source/documentation/governance/tda-security-alignment.html.md.erb
@@ -19,6 +19,8 @@ This section contains information on each item listed in the "Security Alignment
 - **Why** does the item need to be addressed?
 - **How** would a team go about meeting the item requirements?
 
+**Note**: The current GOV.UK security standard is [GovS007](https://www.gov.uk/government/publications/government-functional-standard-govs-007-security).
+
 ## Has a security assessment been conducted on this product?
 
 **What?** – A security assessment determines the steps you need to take to make your service secure in accordance with any relevant policies and standards.
