--- a/source/documentation/principles/frontend-development-principles.html.md.erb
+++ b/source/documentation/principles/frontend-development-principles.html.md.erb
@@ -160,8 +160,8 @@ your tests into code, instead of writing it directly.
 ## 14. Use the right tools
 When writing your code, you’ll be checking your results and debugging them in
 your favourite browser. Make sure you also check on the most common browsers.
-You may find that Firefox is best for debugging, but don’t forget to check
-Chrome and IE as often as possible. Tools like [BrowserStack](https://www.browserstack.com/) let you test across multiple environments, and [virtual machines](https://learn.microsoft.com/en-us/microsoft-edge/devtools-guide-chromium/device-mode/testing-other-browsers) can help you verify behaviour in older browser versions.
+You may find that one type of browser is best for debugging, but don’t forget to check
+Chrome, Edge, Safari or Firefox as often as possible. Tools like [BrowserStack](https://www.browserstack.com/) let you test across multiple environments, and [virtual machines](https://learn.microsoft.com/en-us/microsoft-edge/devtools-guide-chromium/device-mode/testing-other-browsers) can help you verify behaviour in older browser versions.
 
 ## 15. Implement SEO and semantic markup
 Apart from internal sites and ones that are on service.gov.uk (which should block
